--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^8.0.3",
     "node-schedule": "^2.1.1",
     "node-telegram-bot-api": "^0.64.0"
   }
